# toy_mlir

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.ast  main.mlir  main.toy  run.sh
include/toy/: CMakeLists.txt  Combine.td  Dialect.h  Ops.td
src/: Combine.cpp  Dialect.cpp  toy.cpp
